--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=project-management-tool-auth-service
+spring.datasource.url=jdbc:postgresql://localhost:5433/auth_service_db
+spring.datasource.username=postgres
+spring.datasource.password=pasindu
+spring.datasource.driver-class-name=org.postgresql.Driver
