--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/auth_service_db
 spring.datasource.username=postgres
 spring.datasource.password=pasindu
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8080
+spring.jpa.hibernate.ddl-auto=create-drop
