--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,3 +50,13 @@ app.oauth.google.client-secret=${GOOGLE_CLIENT_SECRET}
 # Facebook OAuth Configuration
 app.oauth.facebook.app-id=${FACEBOOK_APP_ID}
 app.oauth.facebook.app-secret=${FACEBOOK_APP_SECRET}
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+spring.kafka.consumer.group-id=auth-service-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=1000
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
