--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,9 @@ rsa.public-key=${RSA_PUBLIC_KEY:}
 rsa.key-store-path=${RSA_KEY_STORE_PATH:./keys}
 
 # JWT Token Configuration
-jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
-jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION:604800000}
-jwt.max-refresh-tokens-per-user=${JWT_MAX_REFRESH_TOKENS_PER_USER:5}
+jwt.access-token.expiration=${JWT_ACCESS_TOKEN_EXPIRATION}
+jwt.refresh-token.expiration=${JWT_REFRESH_TOKEN_EXPIRATION}
+jwt.max-refresh-tokens-per-user=${JWT_MAX_REFRESH_TOKENS_PER_USER}
 
 # Legacy JWT Configuration (for backward compatibility during migration)
 jwt.secret=${JWT_SECRET:}
